# odin-workshop

./: .gitignore  LICENSE  README.md  odin-control.md  odin-data.md
configs/: excalibur-fp.json
python/: .gitattributes  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
python/src/workshop/: adapter.py  controller.py
python/test/config/: workshop.cfg
python/test/static/: index.html
python/test/static/js/: odin_server.js
python/workshop/: _version.py  adapter.py
